# Alter_Ego

./: .editorconfig  .env.example  .flake8  .gitignore  BUG_TASKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EULA.md  Makefile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TERMS.md  alter_ego_computer.py  alter_ego_gui.py  alter_ego_presence.py  alter_shell.py  chaos_rag_wrapper.py  launch_alter_ego.ps1  persona_registry.py  persona_simulator.py  personal_builder.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pytest.yml
alter_ego/: README.md  alter_echo_response.py  alter_ego_computer.py  alter_shell.py  autosave_echo_daemon.py  chaos_rag_wrapper.py  chaos_watchdog.py  configuration.py  dummy_llm.py  echo_whisper_layer.py  persona_fronting.py  pyproject.toml  requirements.txt  run_gui.ps1  sqlite_memory.py
alter_ego.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
alter_ego/datasets/alterego/: alterego.jsonl
alter_ego/tests/: test_alter_shell.py  test_autosave_echo_daemon.py  test_chaos_rag_wrapper.py  test_memory_digester.py
docs/: config.md  index.md  quickstart.md  tts-engines.md
main/: README.md  alter_echo_response.py  alter_ego_computer.py  alter_ego_config.yaml  alter_ego_gui.py  alter_ego_presence.py  alter_shell.py  autosave_echo_daemon.py  chaos_echo_log.chaos  chaos_parser_core.py  chaos_rag_wrapper.py  chaos_watchdog.py  configuration.py  example_session.chaos  gui_config.json  ingest_entire_system.py  launch_alter_ego.ps1  memory_digester.py  persona_fronting.py  persona_simulator.py  pyproject.toml  requirements.txt  run_gui.bat  run_gui.ps1  symbolic_config.yaml
main/configs/: alterego_phi2.yaml
main/gui/: models.py  prefs.py  themes.py  tts.py  ui_helpers.py
main/tests/: conftest.py  test_alter_shell.py  test_chaos_rag_wrapper.py  test_constitution.py  test_path_resolution.py  test_reorganize_projects.py  test_watch_path.py
scripts/: sync_dependencies.py
scripts/batch/: run_gui.bat
scripts/powershell/: launch_alter_ego.ps1  run_gui.ps1
src/alter_ego/: README.md  UPGRADEME.md  __init__.py  alter_echo_response.py  alter_ego_computer.py  alter_ego_config.yaml  alter_ego_gui.py  alter_ego_presence.py  alter_shell.py  autosave_echo_daemon.py  chaos_parser_core.py  chaos_rag_wrapper.py  chaos_watchdog.py  cli.py  configuration.py  dummy_llm.py  ingest_entire_system.py  memory_digester.py  persona_fronting.py  persona_registry.py  persona_simulator.py  personal_builder.py  pyproject.toml  requirements.txt  sqlite_memory.py
src/alter_ego/assets/: eden.constitution.agent.chaosrights
src/alter_ego/assets/config/: alter_ego_config.yaml
src/alter_ego/assets/configs/: alterego_phi2.yaml
src/alter_ego/assets/datasets/alterego/: dummy_playbooks.yaml
src/alter_ego/assets/themes/: twilight.json
src/alter_ego/gui/: __init__.py  models.py  prefs.py  themes.py
src/alter_ego/personas/: Rhea.mirror.json
src/alter_ego/tests/: test_alter_shell.py  test_autosave_echo_daemon.py  test_constitution.py  test_memory_digester.py  test_persona_parsing.py  test_persona_simulation.py
src/alter_ego/themes/: ocean.json
tests/: conftest.py  test_alter_ego_computer_config.py  test_autosave.py  test_cli_import_guard.py  test_configuration.py  test_dummy_llm.py  test_echo_emotion.py  test_persona_integration.py  test_persona_normalization.py  test_persona_parsing.py  test_persona_simulation.py  test_smoke.py  test_symbolic_config_imports.py
