[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alter-ego"
version = "0.1.0"
description = "Alter/Ego — a small text-to-speech assistant for desktop automation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "emre2821", email = "emre2821@example.com" }]
dependencies = [
    "pyttsx3>=2.90,<3.0",
    "click>=8.0,<9.0",
    "typer>=0.9.0,<0.13.0",
    "rich>=13.0,<14.0",
    "pydantic>=1.10,<3.0",
    "pyyaml>=6.0,<7.0",
    "watchdog>=3.0,<5.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4,<0.5",
    "sentence-transformers>=2.2.0,<2.3.0",
    "transformers>=4.38,<4.40",
]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-cov>=4.1,<5.0",
    "flake8>=6.0,<7.0",
    "bandit>=1.7,<2.0",
]

[project.scripts]
"alter-ego" = "alter_ego.cli:main"

[project.urls]
Homepage = "https://github.com/emre2821/Alter_Ego"
Documentation = "https://github.com/emre2821/Alter_Ego#readme"
Changelog = "https://github.com/emre2821/Alter_Ego/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["alter_ego", "alter_ego.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E266", "E501", "W503", "F401", "F841", "F821"]
exclude = [".git", "__pycache__", "dist", "build", ".venv"]
