[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alter-ego"
version = "0.1.0"
description = "Alter/Ego — a small text-to-speech assistant for desktop automation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "emre2821", email = "emre2821@example.com" }]
dependencies = [
    "pyttsx3>=2.99,<3.1",
    "click>=8.1.7,<9.0",
    "typer>=0.12.5,<0.22.0",
    "rich>=14.0,<16.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0.1,<7.0",
    "watchdog>=4.0,<8.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=1.3,<2.0",
    "sentence-transformers>=3.0,<6.0",
    "transformers>=4.57,<5.0",
]
dev = [
    "pytest>=8.3,<10.0",
    "pytest-cov>=5.0,<8.0",
    "flake8>=7.0,<8.0",
    "bandit>=1.9,<2.0",
]

[project.scripts]
"alter-ego" = "alter_ego.cli:main"

[project.urls]
Homepage = "https://github.com/emre2821/Alter_Ego"
Documentation = "https://github.com/emre2821/Alter_Ego#readme"
Changelog = "https://github.com/emre2821/Alter_Ego/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
alter_ego = [
    "assets/**/*.chaos",
    "assets/**/*.json",
    "assets/**/*.jsonl",
    "assets/**/*.yaml",
    "assets/eden.constitution.agent.chaosrights",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["alter_ego", "alter_ego.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E266", "E501", "W503", "F401", "F841", "F821"]
exclude = [".git", "__pycache__", "dist", "build", ".venv"]
