[project]
name = "alter-ego"
version = "0.1.0-alpha"
description = "Local, emotionally intelligent assistant for plural and neurodivergent systems."
authors = [
  { name="emre2821" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyttsx3",
  "pyyaml",
  "openai",
  "gpt4all",
  "nltk",
  "numpy",
  "scikit-learn",
  "markdown2",
  "requests",
  "pydantic",
  "rich",
  "typer",
  "watchdog"
]

[project.optional-dependencies]
rag = [
  "chromadb>=0.4,<0.5",
  "sentence-transformers>=2.2.0,<2.3.0",
  "transformers>=4.38,<4.40",
]

[project.scripts]
alter-ego = "alter_ego_gui:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"" = ["*.chaos", "*.json", "*.yaml", "eden.constitution.agent.chaosrights"]
