[project]
name = "alter-ego"
version = "0.1.0-alpha"
description = "Local, emotionally intelligent assistant for plural and neurodivergent systems."
authors = [
  { name="emre2821" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyttsx3>=2.99,<3.1",
  "pyyaml>=6.0.1,<7.0",
  "openai>=1.0,<3.0",
  "gpt4all>=2.8,<3.0",
  "nltk>=3.9,<4.0",
  "numpy>=1.26,<3.0",
  "scikit-learn>=1.4,<2.0",
  "markdown2>=2.5,<3.0",
  "requests>=2.32,<3.0",
  "pydantic>=2.7,<3.0",
  "rich>=14.0,<15.0",
  "typer>=0.12.5,<0.21.0",
  "watchdog>=4.0,<7.0"
]

[project.optional-dependencies]
rag = [
  "chromadb>=1.3,<2.0",
  "sentence-transformers>=3.0,<6.0",
  "transformers>=4.57,<5.0",
]

[project.scripts]
alter-ego = "alter_ego_gui:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"" = ["*.chaos", "*.json", "*.yaml", "eden.constitution.agent.chaosrights"]
